--- a/doc/experiment.org
+++ b/doc/experiment.org
@@ -1,4 +1,4 @@
-#+TITLE: protobuf experimentation with Golang
+#+TITLE: Google protobuf experimentation with Golang
 
 * Setup
 - Make the directory you are working in and cd to it.
@@ -61,4 +61,48 @@
     [ -f "protobufs/test.pb.go" ] && echo "generated protobuf" || echo "No protobuf generated"
   #+END_SRC
 
-  
+* Original usage example 
+- taken from "getting started with go and protobufs" (see references)
+Copied here so I don't have to keep going back to the website.
+#+BEGIN_SRC go
+  // Taken from : http://tleyden.github.io/blog/2014/12/02/getting-started-with-go-and-protocol-buffers/]
+  package main
+
+  import (
+    "log"
+
+    "github.com/golang/protobuf/proto"
+  )
+
+  func main() {
+
+    test := &Test{
+        Label: proto.String("hello"),
+        Type:  proto.Int32(17),
+        Optionalgroup: &Test_OptionalGroup{
+            RequiredField: proto.String("good bye"),
+        },
+    }
+    data, err := proto.Marshal(test)
+    if err != nil {
+        log.Fatal("marshaling error: ", err)
+    }
+    newTest := &Test{}
+    err = proto.Unmarshal(data, newTest)
+    if err != nil {
+        log.Fatal("unmarshaling error: ", err)
+    }
+    // Now test and newTest contain the same data.
+    if test.GetLabel() != newTest.GetLabel() {
+        log.Fatalf("data mismatch %q != %q", test.GetLabel(), newTest.GetLabel())
+    }
+
+    log.Printf("Unmarshalled to: %+v", newTest)
+
+  }
+
+#+END_SRC
+This is a great intro !
+
+* References
+- [[http://tleyden.github.io/blog/2014/12/02/getting-started-with-go-and-protocol-buffers/][All protobuf notes taken from "Getting started with Go and Protobuffers"]]
